--- a/learn.ipynb
+++ b/learn.ipynb
@@ -1908,6 +1908,417 @@
     "    print(f\"{name}想要去{location}\")\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-size:24px\">\n",
+    "13.函式\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "i have a 倉鼠 it's name is 哈姆太郎\n",
+      "i have a 倉鼠 it's name is 哈姆太郎\n",
+      "i have a 倉鼠 it's name is 哈姆太郎\n",
+      "jeff ccccc chen\n",
+      "姓 jeff\n",
+      "名 chen\n",
+      "年齡 55\n",
+      "please tell me your name\n",
+      " ff\n",
+      "please tell me your name\n",
+      "no no\n"
+     ]
+    }
+   ],
+   "source": [
+    "#當要執行一個工作很多次時，可以直接呼叫使用\n",
+    "#定義一個函式\n",
+    "def greet_user():#建立一個函式\n",
+    "    print(\"hello\")\n",
+    "greet_user()#呼叫\n",
+    "\n",
+    "#引數和參數\n",
+    "def describe_pet(animal_type,pet_name):#建立參數\n",
+    "    print(f\"i have a {animal_type} it's name is {pet_name}\")#在函式中呼叫參數\n",
+    "describe_pet(\"倉鼠\",\"哈姆太郎\")#給予參數值\n",
+    "\n",
+    "#關鍵字引數\n",
+    "def describe_pet(animal_type,pet_name):\n",
+    "    print(f\"i have a {animal_type} it's name is {pet_name}\")\n",
+    "describe_pet(pet_name=\"哈姆太郎\",animal_type=\"倉鼠\")#用關鍵字可以忽略參數的順序\n",
+    "\n",
+    "#預設值\n",
+    "def describe_pet(pet_name,animal_type=\"倉鼠\"):#在剛開始設定animal_type的預設值，注意!!!有預設值的參數需在沒預設值的參數後面\n",
+    "     print(f\"i have a {animal_type} it's name is {pet_name}\")\n",
+    "describe_pet(pet_name=\"哈姆太郎\")\n",
+    "\n",
+    "#返回值return\n",
+    "def get_formatted_name(first_name ,last_name):\n",
+    "    full_name=f\"{first_name} {last_name}\"\n",
+    "    return full_name.title()#回傳\n",
+    "get_formatted_name(\"jeff\",\"chen\")\n",
+    "\n",
+    "#讓引數變為可選擇性的\n",
+    "def get_formatted_name(first_name,last_name,middle_name=\"\"):\n",
+    "    if middle_name:#加入條件可以不一定要所有參數都給予值\n",
+    "        full_name=f\"{first_name} {middle_name} {last_name}\"\n",
+    "    else:\n",
+    "        full_name=f\"{first_name} {last_name}\"\n",
+    "    return full_name\n",
+    "#get_formatted_name(\"jeff\",\"chen\")\n",
+    "name=get_formatted_name(\"jeff\",\"chen\",\"ccccc\")\n",
+    "print(name)\n",
+    "\n",
+    "#返回字典\n",
+    "def build_person(first_name,last_name,age=\"\"):\n",
+    "    people={\"姓\":first_name,\"名\":last_name}\n",
+    "    if age:\n",
+    "        people[\"年齡\"]=age\n",
+    "    return people\n",
+    "perosn=build_person(\"jeff\",\"chen\",\"55\")\n",
+    "for firstname,lastname in perosn.items():\n",
+    "    print(f\"{firstname} {lastname}\")\n",
+    "\n",
+    "#在while迴圈使用函式\n",
+    "def get_formatted_name(first_name,last_name):\n",
+    "    full_name=f\"{first_name} {last_name}\"\n",
+    "    return full_name\n",
+    "active=True\n",
+    "while active:\n",
+    "    print(\"please tell me your name\")\n",
+    "    f_name=input(\"firstname\")\n",
+    "    l_name=input(\"lastname\")\n",
+    "    formattedname=get_formatted_name(f_name ,l_name)\n",
+    "    print(formattedname)\n",
+    "    message=input(\"是否要繼續yes/no\")\n",
+    "    if message==\"no\":\n",
+    "        active=False\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "實作練習  \n",
+    "1.寫一個make_album的函式，此函式能接收歌手名字和專輯名稱，然後返回這兩個資訊的字典。建立有三個歌手專輯的字典並印出  \n",
+    "2.寫一個while迴圈來讓使用者手動輸入專輯資訊"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "名字是周杰倫\n",
+      "專輯是范特西\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_album(singer,album_name):\n",
+    "    album={\"名字\":singer,\"專輯\":album_name}\n",
+    "    return album\n",
+    "while True:\n",
+    "    singer_name=input(\"請輸入歌手名稱\")\n",
+    "    album_name=input(\"請輸入專輯名稱\")\n",
+    "    the_album=make_album(singer_name,album_name)\n",
+    "    message=input(\"要不要繼續\")\n",
+    "    if message==\"no\":\n",
+    "        break\n",
+    "for info,information in the_album.items():\n",
+    "    print(f\"{info}是{information}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "傳入串列"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello hannah\n",
+      "hello jeff\n",
+      "hello candy\n",
+      "以下是已確認的使用者：\n",
+      "lin\n",
+      "joe\n",
+      "henry\n",
+      "jeff\n",
+      "\n",
+      "原始的 unconfirmed_users： ['jeff', 'henry', 'joe', 'lin']\n",
+      "最終的 confirmed_users： ['lin', 'joe', 'henry', 'jeff']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet_user(names):#names會傳送等等建立的串列\n",
+    "    for name in names:\n",
+    "        msg=f\"hello {name}\"\n",
+    "        print(msg)\n",
+    "usernames=['hannah','jeff','candy']#建立一個串列\n",
+    "greet_user(usernames)\n",
+    "\n",
+    "#在函式中修改串列\n",
+    "unconfirmed_users = [\"jeff\", \"henry\", \"joe\", \"lin\"]  # 建立串列\n",
+    "confirmed_users = []  # 轉移的串列\n",
+    "def make_confirmed(user_unconfirmed, user_confirmed):\n",
+    "    while user_unconfirmed:  # 只要還有未確認的用戶\n",
+    "        confirmed = user_unconfirmed.pop()  # 取出最後一個\n",
+    "        user_confirmed.append(confirmed)  # 加入確認清單\n",
+    "    print_list(user_confirmed)  # 呼叫函式來印出確認的名單\n",
+    "\n",
+    "def print_list(confirmed_list):\n",
+    "    print(\"以下是已確認的使用者：\")\n",
+    "    for confirmed in confirmed_list:\n",
+    "        print(confirmed)\n",
+    "# 傳遞 unconfirmed_users 的副本，防止原始清單被修改\n",
+    "make_confirmed(unconfirmed_users[:], confirmed_users)\n",
+    "#make_confirmed(unconfirmed_users, confirmed_users) 用這個函式最後原始的unconfirmed_users會變空值\n",
+    "\n",
+    "# 檢查原始的 unconfirmed_users 是否還保留\n",
+    "print(\"\\n原始的 unconfirmed_users：\", unconfirmed_users)\n",
+    "print(\"最終的 confirmed_users：\", confirmed_users)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "實作練習   \n",
+    "1.建立一個放了簡短文字的串列，並將此串列傳入show_messsages()函式裡  \n",
+    "2.再寫一個send_message函式來印出每條訊息並傳送到一個send_messages串列  \n",
+    "3.要保留原本串列裡的資訊"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "普通\n",
+      "我不愛你\n",
+      "我愛你\n",
+      "['我愛你', '我不愛你', '普通']\n",
+      "['普通', '我不愛你', '我愛你']\n"
+     ]
+    }
+   ],
+   "source": [
+    "send_messages=[\"我愛你\",\"我不愛你\",\"普通\"]\n",
+    "confired_messages=[]\n",
+    "def send_message(send_messages,confired_messages):\n",
+    "    while send_messages:#將原本串列的資料移到新串列\n",
+    "        cofired=send_messages.pop()\n",
+    "        confired_messages.append(cofired)\n",
+    "    show_messages(confired_messages)\n",
+    "    \n",
+    "def show_messages(confired_messages):#印出串列內容\n",
+    "    for cofireds in confired_messages:\n",
+    "        print(cofireds)\n",
+    "send_message(send_messages[:],confired_messages)#讓send_message以複製品進入函式\n",
+    "print(send_messages)\n",
+    "print(confired_messages)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "傳入任意數量的引數到函式內"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你選了('瑪格麗特', '香腸', '香蕉')\n",
+      "你訂了20吋\n",
+      "你選了瑪格麗特\n",
+      "你選了香腸\n",
+      "你選了香蕉\n",
+      "locationprinceton\n",
+      "fieldphysics\n",
+      "firstjeff\n",
+      "lastchen\n"
+     ]
+    }
+   ],
+   "source": [
+    "#當我們不知道函式要接收多少引數時\n",
+    "def make_pizza(*topping):#任意數量參數\n",
+    "        print(f\"你選了{topping}\")\n",
+    "make_pizza(\"瑪格麗特\",\"香腸\",\"香蕉\")#會把輸出值裝到一個多元組\n",
+    "#新增位置函數\n",
+    "def make_pizza(inch,*topping):\n",
+    "    print(f\"你訂了{inch}吋\")\n",
+    "    for toppings in topping:#也能用迴圈印出\n",
+    "        print(f\"你選了{toppings}\")\n",
+    "make_pizza(20,\"瑪格麗特\",\"香腸\",\"香蕉\")\n",
+    "#使用任意數量的關鍵字引數\n",
+    "def built_profile(first,last,**user_info):# **info會建立一個空的user_info字典\n",
+    "    user_info[\"first\"]=first\n",
+    "    user_info[\"last\"]=last\n",
+    "    return user_info\n",
+    "user_profile=built_profile(\"jeff\",\"chen\",location=\"princeton\",field=\"physics\")#會傳入任意數量的關鍵字引數\n",
+    "for key,value in user_profile.items():\n",
+    "     print(f\"{key}{value}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "實作練習  \n",
+    "1.編寫一個函式讓他接收客戶要在三明治中添加的各種配料，這個函式只有一個參數  \n",
+    "2.複製前面的user_profile，呼叫bulit_profile()來建立關於我的簡介，呼叫時先提供姓、名，以及其他三項關於我的事情的key-value  \n",
+    "3.寫一個函式能將車子的資存在字典中。這個函式一定會接收廠牌和型號，然後還是任意數量的關鍵字引數\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您加了黃瓜\n",
+      "您加了美乃滋\n",
+      "您加了培根\n",
+      "您加了火腿\n",
+      "您加了培根\n",
+      "姓 陳\n",
+      "名 奕君\n",
+      "地點 連江縣\n",
+      "手機 0963660898\n",
+      "馬力 2000cc\n",
+      "產地 德國\n",
+      "車款 benz\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.\n",
+    "def sandwish(*topping):\n",
+    "    for toppings in topping:\n",
+    "        print(f\"您加了{toppings}\")\n",
+    "sandwish(\"黃瓜\",\"美乃滋\",\"培根\")\n",
+    "sandwish(\"火腿\",\"培根\")\n",
+    "#2.\n",
+    "def built_profile(**user_info):# **info會建立一個空的user_info字典\n",
+    "    return user_info\n",
+    "user_profile=built_profile(姓=\"陳\",名=\"奕君\",地點=\"連江縣\",手機=\"0963660898\")#會傳入任意數量的關鍵字引數\n",
+    "for key,value in user_profile.items():\n",
+    "     print(f\"{key} {value}\")\n",
+    "#3\n",
+    "def built_car(category,**car_info):\n",
+    "    car_info[\"車款\"]=category\n",
+    "    return car_info\n",
+    "car_profile=built_car(\"benz\",馬力=\"2000cc\",產地=\"德國\")#會傳入任意數量的關鍵字引數\n",
+    "for key,value in car_profile.items():\n",
+    "     print(f\"{key} {value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "把函式存在模組中"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你訂了16的披薩\n",
+      "加了以下配料香腸\n",
+      "加了以下配料鳳梨\n",
+      "你訂了16的披薩\n",
+      "加了以下配料jjj\n",
+      "加了以下配料aaa\n",
+      "你訂了16的披薩\n",
+      "加了以下配料fff\n",
+      "加了以下配料eaa\n",
+      "你訂了16的披薩\n",
+      "加了以下配料fff\n",
+      "加了以下配料eaa\n",
+      "你訂了25的披薩\n",
+      "加了以下配料kjdi\n"
+     ]
+    }
+   ],
+   "source": [
+    "#把函式存在不同檔案裡可以幫助隱藏細節讓程式看起來更加簡潔，也可以和其他人分享函式\n",
+    "import pizza #匯入剛剛的pizza模組，注意!!!這個只會匯入函式，其他無關程式皆不會被匯入\n",
+    "#from pizza import* 也可以直接召喚所有函式\n",
+    "pizza.make_pizza(16,\"香腸\",\"鳳梨\")\n",
+    "#從模組裡匯入某個函式\n",
+    "from pizza import make_pizza\n",
+    "make_pizza(16,\"jjj\",\"aaa\")\n",
+    "#還可以用as讓函式指定其他名字\n",
+    "from pizza import make_pizza as mp\n",
+    "mp(16,\"fff\",\"eaa\")\n",
+    "#也可以用as讓模組指定其他名字及召喚所有函式\n",
+    "from pizza import*\n",
+    "mp(16,\"fff\",\"eaa\")\n",
+    "#也可以將模組命名其他名字\n",
+    "import pizza as p\n",
+    "p.make_pizza(25,\"kjdi\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-size:24px\">\n",
+    "14.類別\n",
+    "</span>"
+   ]
   }
  ],
  "metadata": {
