--- a/learn.ipynb
+++ b/learn.ipynb
@@ -3067,7 +3067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3115,11 +3115,435 @@
     "    try:\n",
     "       answer = int(first_number) / int(second_number)\n",
     "    except ZeroDivisionError:#找到對應錯誤訊息\n",
+    "        #pass (用pass出錯時可以直接無視)\n",
     "        print(\"您不可以除以零\")\n",
     "    else:\n",
     "        print(answer)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "找不到檔案\n"
+     ]
+    }
+   ],
+   "source": [
+    "#處理FileNotFoundError例外\n",
+    "filename=\"test3.txt\"\n",
+    "try:\n",
+    "    with open(filename) as file_object: \n",
+    "        contents = file_object.readlines()\n",
+    "except FileNotFoundError:\n",
+    "    print(\"找不到檔案\")\n",
+    "else:\n",
+    "    for content in contents:\n",
+    "        print(content.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "分析文字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'is', 'a', 'beautiful', 'woman']\n",
+      "Alice\n",
+      "is\n",
+      "a\n",
+      "beautiful\n",
+      "woman\n",
+      "['3264', '8949292', '0717']\n",
+      "3264 裡面有4個字\n",
+      "8949292 裡面有7個字\n",
+      "0717 裡面有4個字\n",
+      "找不到檔案\n",
+      "['你好阿我要jeff你好阿恩恩你好阿喔喔你好阿', '你好阿aa', '你好阿yes', '你好阿yes', '你好阿', '你好阿yes', '你好阿恩恩']\n",
+      "你好阿我要jeff你好阿恩恩你好阿喔喔你好阿 裡面有22個字\n",
+      "你好阿aa 裡面有5個字\n",
+      "你好阿yes 裡面有6個字\n",
+      "你好阿yes 裡面有6個字\n",
+      "你好阿 裡面有3個字\n",
+      "你好阿yes 裡面有6個字\n",
+      "你好阿恩恩 裡面有5個字\n"
+     ]
+    }
+   ],
+   "source": [
+    "title=\"Alice is a beautiful woman\"\n",
+    "print(title.split())#會將字拆分成串列\n",
+    "for words in title.split():#用迴圈將他們印出\n",
+    "    print(words)\n",
+    "\n",
+    "#處理多個檔案\n",
+    "def count_words(filename):\n",
+    "    try:\n",
+    "        with open(filename,encoding=\n",
+    "                  \"utf-8\") as file_object: \n",
+    "            contents = file_object.read()\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"找不到檔案\")\n",
+    "    else:\n",
+    "        print(contents.split())\n",
+    "        for words in contents.split():#用迴圈將他們印出\n",
+    "            print(f\"{words} 裡面有{len(words)}個字\")#印出有幾個字\n",
+    "filenames=[\"for_test_fie/test.txt\",\"for_test_fie/tes2.txt\",\"for_test_fie/guest.txt\"]\n",
+    "for filename in filenames:\n",
+    "    count_words(filename)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "實作練習  \n",
+    "1.編寫程式提示使用者輸入兩個數字，再加起來印出結果(在輸入不是數字時會出現TypeError)，放到while迴圈中做出例外測試  \n",
+    "2.找一些文章建立兩個檔案，使用count()方法確定某個單字或短句在字串中出現幾次  \n",
+    "舉例:  \n",
+    ">>line=\"Row row row your boat\"  \n",
+    "line.count(\"row\")  \n",
+    ">>2  \n",
+    "line.lower().count(\"row\")  \n",
+    ">>3  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "近年國旅住宿越來越貴，許多民眾都選擇出國玩，一名網友則認為，台灣還是有一些很不錯的風景區，像是日月潭、太魯閣等，他好奇，如果撇開花費及時間的問題，大家覺得台灣哪個地方值得一去？話題掀起討論，最多人點名花東地區和離島馬祖，「太魯閣景色真的一絕」、「馬祖很不錯，和台灣本島完全不一樣的風景。」\n",
+      "一名網友昨（20日）在批踢踢發文表示，國旅慘澹的原因之一就是消費比日本貴，品質又不好，不過台灣還是有一些很不錯的風景區，像是南投日月潭、花蓮太魯閣、花東縱谷，或是墾丁的沙灘也滿漂亮。\n",
+      "原PO好奇「不考慮金錢跟時間的話，台灣有什麼地方值得國旅一下的？」話題掀起熱議，許多網友點名東部，「太魯閣啊，不過短期不能去了」、「花東可惜就是地震，不然太魯閣景色真的一絕」、「想放鬆可能還是東部吧」。\n",
+      "另外也有不少網友推薦離島，「不考慮時間跟錢就馬祖啊」、「馬祖南、北竿和東、西莒可以去住看看」、「馬祖跟台灣本島完全不一樣的風景」、「蘭嶼還可以，就是價格比較高」、「年初去了小琉球，看野生的海龜意外好玩。」\n",
+      "也有其他網友認為，台灣的山算很漂亮，景色不輸國外，「山區都不錯，平地就算了」、「老街都沒特色」、「值得去的地方，也都一小小塊而已。」\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "該詞彙共出現5次\n",
+      "\n",
+      "身處在這個人手一機、社群爆炸的時代，各種網路流行語層出不窮。從「無言薯條」、「傻眼貓咪」，再到「是在哈囉」、「像極了愛情」，這些從網路發跡的用語無一不在社群平台上掀起熱潮，成為時下不少年輕人最常說的口頭禪。《網路溫度計DailyView》透過《KEYPO大數據關鍵引擎》輿情分析系統，曾於2023年調查過年度爆紅網路10大流行語，今年再度調查聲量最高的10大網路用語，沒想到才經過短短一年，榜單上的流行語居然與去年截然不同，只能說網路世界瞬息萬變，這更替速度實在快到令人措手不及。\n",
+      "NO.10 已購買小孩愛吃\n",
+      "不管是什麼貼文內容，最近在各大社群平台的留言區經常看見「已購買，小孩愛吃」這句話，因為和文章、影片內容完全不相關，所以有不少網友不解這句話到底是什麼意思？其實這是來源自網購買家的評價，分享孩子對商品的真實感受，卻意外收穫無數按讚。之後也有業主找網軍回文，營造商品熱賣的假象，但網軍可能沒發現到商品屬性的不同，在非食物類型的貼文下也回應「已購買小孩愛吃」，接著就被大家廣泛運用於反諷業配文，造成一股已讀亂回的現象。\n",
+      "本次調查的聲量高峰落在九月底，藝人陶晶瑩就在Threads上發文寫下：「那個已回購、小孩愛吃是什麼意思？」留言區引起大批網友熱情解答，「就是隨便亂用就對了」、「就是亂用，反而真正吃的下面不可以回」、「就是不知道要回覆什麼的時候，隨便亂回覆用的」、「諷刺業配文」。\n",
+      "\n",
+      "該詞彙共出現4次\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "def number_counter():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            first_number=int(input(\"輸入第一個數字\"))\n",
+    "            second_number=int(input(\"輸入第二個數字\"))\n",
+    "        except:\n",
+    "            print(\"請輸入數字\")\n",
+    "        else:\n",
+    "            number=first_number+second_number\n",
+    "            print(number)\n",
+    "            message=input(\"繼續嗎\")\n",
+    "            if message==\"no\":\n",
+    "                break\n",
+    "number_counter()\n",
+    "#2\n",
+    "def artical_counter(filename):\n",
+    "    try:\n",
+    "        with open(filename,encoding=\"utf-8\") as file_object:\n",
+    "            contents=file_object.read()\n",
+    "    except:\n",
+    "        print(\"找不到檔案\")\n",
+    "    else:\n",
+    "        print(f\"{contents}\\n\")\n",
+    "        message=input(\"請輸入想找的詞\")\n",
+    "        count=contents.count(message)#count函數來算message出現了幾次\n",
+    "        print(f\"該詞彙共出現{count}次\\n\")\n",
+    "\n",
+    "use_aritical_counter=[\"for_test_fie/matsu.txt\",\"for_test_fie/pofun.txt\"]\n",
+    "for use in use_aritical_counter:#用迴圈召喚兩個檔案\n",
+    "    artical_counter(use)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "儲存資料"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we will remember your name\n",
+      "welcome jeff chen\n"
+     ]
+    }
+   ],
+   "source": [
+    "#用josn把簡單的python資料轉到檔案內，在下次執行程式時載入這份檔案的資料\n",
+    "import json #先把json模組引入\n",
+    "numbers=[2,3,4,5,7]\n",
+    "filename=\"number.json\"\n",
+    "with open(filename,'w') as f:\n",
+    "    json.dump(numbers,f)#把資料儲存到number.json裡\n",
+    "\n",
+    "#接著要儲存和讀取使用者生成的資料\n",
+    "username=input(\"what's your name\")#先讓使用者輸入名字並存到username.json\n",
+    "filename=\"username.json\"\n",
+    "with open(filename,'w') as f:\n",
+    "    json.dump(username,f)\n",
+    "    print(f\"we will remember your name\")\n",
+    "\n",
+    "#接著讀取\n",
+    "filename=\"username.json\"\n",
+    "with open(filename) as f:\n",
+    "    username=json.load(f)#用json.load讀取\n",
+    "    print(f\"welcome {username}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome jeff chen\n"
+     ]
+    }
+   ],
+   "source": [
+    "#重構 讓程式更完整\n",
+    "def get_stored_username():#獲取json裡的username裡的username\n",
+    "    try:\n",
+    "        with open(filename) as f:\n",
+    "            username=json.load(f)\n",
+    "    except:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return username\n",
+    "\n",
+    "def get_username():#寫入username\n",
+    "    username=input(\"what's your name\")\n",
+    "    with open(filename,'w') as f:\n",
+    "        json.dump(username,f)\n",
+    "    return username\n",
+    "\n",
+    "def greet_user():#整合兩個功能並印出username\n",
+    "    username=get_stored_username()\n",
+    "    if username:\n",
+    "        print(f\"welcome {username}\")\n",
+    "    else:\n",
+    "        username=get_username()\n",
+    "        print(f\"we will remember your name\")\n",
+    "\n",
+    "greet_user()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "實作練習  \n",
+    "1.寫個程式請使用者輸入喜歡的數字，並存到json檔中，再讀檔把它印出來  \n",
+    "2.修改上面greet_user()函式 確認目前使用者和儲存的使用者是不是同個人，如果不是請當前使用者再重新新增使用者到json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "welcome jeff\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "filename=\"number.json\"\n",
+    "def input_number():\n",
+    "    number=int(input(\"輸入一個喜歡的數字\"))\n",
+    "    try:\n",
+    "        with open(filename,\"w\") as f:\n",
+    "            json.dump(number,f)\n",
+    "    except:\n",
+    "        pass\n",
+    "    else:\n",
+    "        return number\n",
+    "\n",
+    "def get_input_number():\n",
+    "    try:\n",
+    "        with open(filename) as f:\n",
+    "            favorite_number=json.load(f)\n",
+    "    except:\n",
+    "        pass\n",
+    "    else:\n",
+    "        return favorite_number\n",
+    "\n",
+    "def output_number():\n",
+    "    number=get_input_number()\n",
+    "    if number:\n",
+    "        print(number)\n",
+    "    else:\n",
+    "        input_number()\n",
+    "        print(\"we already remembered your favorite number\")\n",
+    "\n",
+    "output_number()\n",
+    "\n",
+    "#2\n",
+    "filename=\"username.json\"\n",
+    "def get_stored_username():\n",
+    "    try:\n",
+    "        with open(filename) as f:\n",
+    "            username=json.load(f)\n",
+    "    except:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return username\n",
+    "\n",
+    "def get_username():\n",
+    "    username=input(\"what's your name\")\n",
+    "    with open(filename,'w') as f:\n",
+    "        json.dump(username,f)\n",
+    "    return username\n",
+    "\n",
+    "def greet_user():\n",
+    "    username=get_stored_username()\n",
+    "    current_user=input(\"請輸入你的名字\")\n",
+    "    if username and username==current_user:\n",
+    "        print(f\"welcome {username}\")\n",
+    "    else:\n",
+    "        print(f\"you name is not right!\")\n",
+    "        username=get_username()\n",
+    "        print(f\"we will remember your name\")\n",
+    "\n",
+    "greet_user()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-size:24px\">\n",
+    "16.測試程式碼，詳細練習在test.py\n",
+    "</span> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter'q' at any time to quit\n",
+      "我的名字Jeffchen\n"
+     ]
+    }
+   ],
+   "source": [
+    "#原本的程式只能一個一個測\n",
+    "from name_function import get_formatted_name#先把模組叫進來\n",
+    "print(\"Enter'q' at any time to quit\")\n",
+    "while True:\n",
+    "    first=input(\"\\npleasee give me a first name\")\n",
+    "    if first=='q':\n",
+    "        break\n",
+    "    last=input(\"\\npleasee give me a last name\")\n",
+    "    if last=='q':\n",
+    "        break\n",
+    "    formatted_name=get_formatted_name(first,last)\n",
+    "    print(f\"我的名字{formatted_name}\")#原本只能慢慢一個一個測"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "各種assert方法  \n",
+    ">>assertEqual(a,b) 驗證a == b  \n",
+    ">>assertNotEqual(a,b) 驗證a != b  \n",
+    ">>asserTrue(x) 驗證x為True  \n",
+    ">>asserFalse(x) 驗證x為False  \n",
+    ">>asserIn(item,list) 驗證item有在串列裡  \n",
+    ">>asserNotIn(item,list) 驗證item沒有在串列裡  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你最愛看甚麼電影\n",
+      "調查結果\n",
+      "我愛你\n",
+      "是是是\n"
+     ]
+    }
+   ],
+   "source": [
+    "#使用test裡的anonymousSurvey類別\n",
+    "from test import AnonymousSurvey\n",
+    "my_survey=AnonymousSurvey(\"你最愛看甚麼電影\")\n",
+    "my_survey.show_question()\n",
+    "while True:\n",
+    "    message=input(\"要不要停下yes/no\")\n",
+    "    if message==\"yes\":\n",
+    "        break\n",
+    "    respond=input(\"請輸入回答\")\n",
+    "    my_survey.store_question(respond)\n",
+    "my_survey.show_result()\n",
+    "#確定可正常執行，回到test.py編寫自動化測試"
    ]
   }
  ],
